# reinforcementPlusOne

./: .gitmodules  game.py  network.py  train.py  trainStateChange.py  trainValidMove.py
plusOne/: CMakeLists.txt
plusOne/pysrc/: MANIFEST.in.linux  MANIFEST.in.windows  setup.py
plusOne/pysrc/plusOne/: __init__.py  game.py  networkCategorical.py
plusOne/src/: CMakeLists.txt
plusOne/src/plusOne/: CMakeLists.txt  game.cpp  game.h  libplusOne_python.cpp  pybind11_wrapper.h
validMove/3/: testValidMove.py  trainValidMove.py
validMove/4/: testValidMove.py  trainValidMove.py
validMove/5/: trainValidMove.py
validMoveAll/4/: test.py  trainValidMove.py
